frontend/src/styles/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style: none;
  text-decoration: none;
}
body {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 400;
  overflow-x: hidden;
}
.header {
  width: 100%;
  text-align: center;
  color: #000000;
}
.haeder__bg-container {
  background-image: url(../images/backgrounds/model-2.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  height: 40vh;
  /* position: relative; */
}
.header__container {
  background-color: #ffffff;
  color: #ffff;
  width: 100%;
  padding: 5px 15px;
  text-align: center;
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* position: absolute; */
  z-index: 2;
  top: 0;
}
.header__nav-bar {
  display: flex;
  width: 100%;
  text-transform: capitalize;
}
.header__language-side {
  display: flex;
  align-items: center;
}
.header__language-side select {
  padding: 5px 8px;
  border: none;
  background-color: rgb(0, 0, 0, 0.1);
  color: #32353c;
  text-transform: capitalize;
  border-radius: 5px;
}
.search-bar {
  display: none;
}
.header__nav-bar a {
  color: #ffff;
  text-decoration: none;
  display: none;
}
.logo_container {
  margin: 0 auto;
  width: 100px;
  cursor: pointer;
}
#logo_container_img {
  width: 100%;
}
.header__cart-side {
  display: flex;
  cursor: pointer;
  color: #000000;
  align-items: center;
}
.header__cart-side__total-price {
  display: none;
}
.header__cart-side__img-cart {
  width: 40px;
  margin-left: 10px;
  position: relative;
}
.header__cart-side img {
  width: 100%;
}
.header__cart-side__total {
  position: absolute;
  padding: 2px 5px;
  top: 0;
  right: -4px;
  background-color: #b79b6c;
  color: #ffff;
  border-radius: 50%;
  font-size: 0.8rem;
}
.main {
  padding: 20px 0;
  width: 100%;
  background-color: #000000;
  color: #ffff;
  overflow-x: hidden;
}
.main__shipping-details {
  display: flex;
  width: 100%;
  margin: 0 5px;
  justify-content: center;
  /* font-size: 0.4rem; */
  font-size: 0.6rem;
}
.main__shipping-details p {
  margin: 0 5px;
}
.main__shipping-details a {
  color: #ffff;
  text-decoration: none;
}
#shipping-details__ios-airplane {
  width: 20px;
  margin-right: 3px;
}

.the-sections {
  padding: 20px 0;
  text-align: center;
  letter-spacing: 0.008em;
}
.the-sections section {
  margin-top: 50px;
  margin-bottom: 50px;
}
.sub-heading,
.main-heading {
  padding: 5px 0;
  font-weight: 400;
}
.main-heading__price {
  color: #b79b6c;
}
.shopping-btn {
  margin: 15px;
  padding: 8px;
  width: 100px;
  background-color: #32353c;
  color: #ffff;
  border: none;
  border-radius: 3px;
  text-transform: capitalize;
  cursor: pointer;
}

.collection__products {
  margin: 10px 10%;
  position: relative;
  
}
.collection__products_container__product_img {
  background-color: #b7b7b7;
  background-image: linear-gradient(to bottom right, #b7b7b7, #f9f9f9);
  margin-bottom: 10px;
}
#collection__products_container-green__product_img {
  background-color: #008432;
  background-image: linear-gradient(to bottom right, #008432, #002e05);
}
.collection__products_container img {
  width: 20vw;
}
.collection__products__descr__details {
  text-align: left;
  font-size: 1.1rem;
  font-weight: 100;
}
.collection__products__descr__details p {
  margin: 5px 0;
}
.product_price {
  /* margin: 5px 0; */
  color: #343434;
}
/* .collection__product_price {
  position: absolute;
  bottom: 0;
} */
.collection__products_container {
  display: none;
}
.dots__container{
  text-align: center;
}
.dot {
  height: 10px;
  width: 10px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active {
  background-color: #717171;
}

.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}
@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}
.prev,.next,.text {
  font-size: 11px;
}
.prev,.next {
  cursor: pointer;
  position: absolute;
  top: 25%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 20px;
  transition: 0.6s ease;
  user-select: none;
}

.next {
  right: -40px;
}
.prev{
  left: -40px;
}


.new-arrival__products {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 20px;
  margin: 10px 30px;
  grid-template-rows: auto 1fr;
}
.new-arrival__desc {
  margin: 0 40px;
}

.new-arrival__product-container {
  text-align: left;
  font-size: 1rem;
  font-weight: 100;
}
.new-arrival__product-container__detail {
  margin-top: 15px;
}
#new-arrival__main-img__model21 {
  height: 100%;
}
.new-arrival__container img {
  width: 100%;
}
.new-arrival__product_price {
  display: flex;
}
.new-arrival__product_price p {
  margin-right: 10px;
}
#product_price__old {
  text-decoration-line: line-through;
}
.horror__container {
  position: relative;
  margin-top: 150px;
}
.horror__container__bg {
  background-image: url(../images/backgrounds/horror-bg.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  width: 100%;
  /* height: 20vh; */
  height: calc(50vh - 100px);
}
/* .horror__desc {
  margin: 10px;
} */
.insta-posts__container {
  margin: 10px 0;
  min-height: 150px;
}
.insta-posts__path {
  display: flex;
  width: 100%;
  justify-content: center;
  font-size: 0.8rem;
}
.insta-posts__path a {
  text-decoration: none;
  color: #ffff;
}
.insta-posts__path img {
  width: 15px;
  margin: 0 5px;
}
.insta-posts__slider {
  margin-top: 40px;
}
.the-sections__fashion {
  border-top: 1px solid #707070;
  margin: 10px 30px;
}
.brand__social-media {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin: 20px 50px;
}
.brand__logo {
  text-align: left;
  margin: 5px 0;
}
/* ... */

